syntax = "proto3";
package chengyu97.schat.schat;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "schat/params.proto";
import "schat/system_info.proto";
import "schat/encrypt_key.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/ChengYu97/SChat/x/schat/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ChengYu97/SChat/schat/params";
  }
  // Queries a SystemInfo by index.
	rpc SystemInfo(QueryGetSystemInfoRequest) returns (QueryGetSystemInfoResponse) {
		option (google.api.http).get = "/ChengYu97/SChat/schat/system_info";
	}
// Queries a EncryptKey by index.
	rpc EncryptKey(QueryGetEncryptKeyRequest) returns (QueryGetEncryptKeyResponse) {
		option (google.api.http).get = "/ChengYu97/SChat/schat/encrypt_key/{address}";
	}

	// Queries a list of EncryptKey items.
	rpc EncryptKeyAll(QueryAllEncryptKeyRequest) returns (QueryAllEncryptKeyResponse) {
		option (google.api.http).get = "/ChengYu97/SChat/schat/encrypt_key";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetSystemInfoRequest {}

message QueryGetSystemInfoResponse {
	SystemInfo SystemInfo = 1 [(gogoproto.nullable) = false];
}
message QueryGetEncryptKeyRequest {
	  string address = 1;

}

message QueryGetEncryptKeyResponse {
	EncryptKey encryptKey = 1 [(gogoproto.nullable) = false];
}

message QueryAllEncryptKeyRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEncryptKeyResponse {
	repeated EncryptKey encryptKey = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
